fix(@clayui/css): Modals `modal-header` increase z-index so it appears on top of `modal-body`. `modal-header` border gets hidden by `modal-body` border due to last commit.
fix(@clayui/css): Modals convert `modal-header` to use Sass map pattern

--- a/packages/clay-css/src/scss/components/_modals.scss
+++ b/packages/clay-css/src/scss/components/_modals.scss
@@ -179,25 +179,14 @@
 }
 
 .modal-header {
-	align-items: center;
-	background-color: $modal-header-bg;
-	border-color: $modal-header-border-color;
-	border-style: solid;
-	border-width: 0 0 $modal-header-border-width 0;
+	$breakpoint-down: map-get($modal-header, breakpoint-down);
 
-	@include border-top-radius($modal-content-inner-border-radius);
+	@include clay-css($modal-header);
 
-	color: $modal-header-color;
-	display: flex;
-	flex-shrink: 0;
-	height: $modal-header-height;
-	justify-content: space-between;
-	padding: $modal-header-padding;
-	padding-bottom: 0;
-	padding-top: 0;
+	@include clay-scale-component(null, $breakpoint-down) {
+		$mobile: setter(map-get($modal-header, mobile), ());
 
-	@include clay-scale-component {
-		height: $modal-header-height-mobile;
+		@include clay-css($mobile);
 	}
 }
 
